--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-server.port = 5858
+spring.data.mongodb.uri=mongodb://localhost:27018
+spring.data.mongodb.database=PujiInternational
+spring.jackson.default-property-inclusion=non_null
